[package]
name = "s3-cas"
version = "0.1.0"
edition = "2018"
authors = ["Lee Smet <lee.smet@hotmail.com>"]
readme = "README.md"
description = "An experimental S3 server using a cas storage layer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
binary = ["anyhow", "dotenv", "structopt", "tokio"]
vendored = ["openssl"]
refcount = []

[[bin]]
name = "s3-cas"
required-features = ["binary"]

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
# s3-server = "0.1"
s3-server = { git = "https://github.com/LeeSmet/s3-server" }
sled = "0.34"
async-trait = "0.1"
hyper = { version = "0.14.7", features = ["server"] }
pin-project-lite = "0.2"
futures = "0.3"
async-fs = "1.5"
faster-hex = "0.6"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
structopt = { version = "0.3", optional = true }
anyhow = { version = "1.0", optional = true }
dotenv = { version = "0.15", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
prometheus = { version = "0.13", features = ["process"] }

[target.'cfg(any(taget_arch = "x86", target_arch = "x86_64"))'.dependencies]
md-5 = { version = "0.9", features = ["asm"] }

[target.'cfg(not(any(taget_arch = "x86", target_arch = "x86_64")))'.dependencies]
md-5 = { version = "0.9" }

[profile.release]
lto = true
codegen-units = 1
